Redid nav component

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -137,3 +137,12 @@ a {
 [title^='Select'] {
     display: none
 }
+
+Button {
+    color: white !important
+}
+
+a:-webkit-any-link {
+  text-decoration: none;
+  color: inherit;
+}
