--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -146,3 +146,10 @@ a:-webkit-any-link {
   text-decoration: none;
   color: inherit;
 }
+
+@media only screen and (max-width: 600px) {
+    Card {
+        width: 100%
+    }
+    
+}
